:art: Agrego informacion y cambio de estilo

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,30 @@
         </div>
     </section>
 
+    <section id="acerca" class="seccion-blanca">
+        <h2>📘 <span class="fw-bold">Acerca de FLORYCELL</span></h2>
+        <div class="acerca-contenedor">
+            <div class="acerca-tarjeta animate-fade">
+                <h4>🎯 MISIÓN</h4>
+                <p>
+                    Ofrecer soluciones tecnológicas de alta calidad a través de la venta de teléfonos y servicios de reparación, brindando confianza, eficiencia y atención personalizada para satisfacer las necesidades de nuestros clientes.
+                </p>
+            </div>
+            <div class="acerca-tarjeta animate-fade" style="animation-delay: 0.2s;">
+                <h4>🚀 VISIÓN</h4>
+                <p>
+                    Ser reconocidos como líderes en el mercado local por nuestro compromiso con la innovación, el excelente servicio al cliente y la contribución al desarrollo tecnológico de la comunidad.
+                </p>
+            </div>
+            <div class="acerca-tarjeta animate-fade" style="animation-delay: 0.4s;">
+                <h4>✅ OBJETIVO</h4>
+                <p>
+                    Garantizar la satisfacción del cliente a través de servicios de venta y reparación de teléfonos de alta calidad, estableciendo relaciones duraderas y fomentando la confianza en cada interacción.
+                </p>
+            </div>
+        </div>
+    </section>
+
 
     <section id="catalogo" class="seccion-blanca">
         <h2>Catálogo de Teléfonos</h2>
